--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   prisma:
     image: prismagraphql/prisma:1.12
-    restart: always
+    restart: "no"
     ports:
     - "4466:4466"
     environment:
